<resources>
    <string name="firmaGoogleHopeapp">933262354310-o5pqun9rlh3iegv4mudi83l9sr1dk9c0.apps.googleusercontent.com</string>
    <string name="app_name">HopeApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Reporte de sintomas</string>
    <string name="menu_slideshow">Proximas citas</string>
    <string name="opcBarHistorialSintomas">Historial Sintomas</string>
    <string name="opcBarMiProgreso">Mi progreso</string>
    <string name="opcBarProximasCitas">Próximas Citas</string>
    <!-- Ventana Login-->
    <string name="vLoginTxtRegistro">¡Regisrate!</string>
    <string name="vLoginTxtNuevo">¿Eres nuevo/a?</string>
    <!-- Ventana de registro uno-->
    <string name="titleRegUno">¿Cómo deseas Registrarte?</string>
    <string name="vregistroUnoRbPaciente">Paciente</string>
    <string name="vregistroUnoRbDoctor">Doctor</string>
    <string name="vRegistroUnoBtnEmail">Registrar con Email</string>
    <string name="vRegistroUnoBtnRegisterGoogle">Registrar con Google</string>
    <!-- Ventana de de registro Genérica-->
    <string name="vRegistroGenTitulo">Ingrese sus datos de registro</string>
    <string name="vRegistroGenTxtNombre">Nombre(s)</string>
    <string name="vRegistroGenTxtApellidos">Apellidos</string>
    <string name="vRegistroGenTxtEdad">Edad</string>
    <string name="vRegistroGenTxtEmail">Email</string>
    <string name="vRegistroGenTxtContraseña">Contraseña</string>
    <string name="vRegistroGenTxtConfContraseña">Confirmar Contraseña</string>
    <string name="vRegistroGenBtnSiguiente">Siguiente</string>
    <string name="vvRegistroGenBtnCancelar">Cancelar</string>
    <!--Ventana Registro Doctor -->
    <string name="vRegistroDoctorTxtTitulo">Registro del doctor</string>
    <string name="vRegistroDoctorTxtEspecialidad">Especialidad</string>
    <string name="vRegistroDoctorTxtCedula">Cedula Profesional</string>
    <string name="vRegistroDoctorTxtEstudios">Estudios</string>
    <string name="vRegistroDoctorTxtExperiecia">Experiencia (Uno por linea)</string>
    <string name="vRegistroDoctorBtnRegistrar">Registrar</string>
    <string name="vRegistroDoctorBtnRegresar">Regresar</string>
    <!--Ventana Registro Paciente -->
    <string name="vRegistroPacienteTxtTitulo">Registro del paciente</string>
    <string name="vRegistroPacienteTxtTipoCnacer">Tipo de cancer</string>
    <string name="vRegistroPacienteTxtTiempoDiag">Tiempo de diagnostico</string>
    <string name="vRegistroPacienteTxtEtapaCancer">Etapa del cancer</string>
    <string name="vRegistroPacienteTxtSintomasPrevios">Sintomas previos (Uno por linea)</string>
    <string name="vRegistroPacienteBtnRegistrar">Registrar</string>
    <string name="vRegistroPacienteBtnRegresar">Regresar</string>
    <string name="vRegistroPacienteBtnFotoPefil">Seleccionar Foto...</string>
    <string name="vRegistroPacienteBtnFotoExpediente">Seleccionar expediente..</string>
    <!-- Ventana de registro de sintomas-->
    <string name="vRegSintomaTitulo">Registro de sintomas</string>
    <string name="vRegSintomaTxtSintoma">Sintoma</string>
    <string name="vRegSintomaTxtHora">Hora</string>
    <string name="vRegSintomaTxtIntensidad">Intensidad</string>
    <string name="vRegSintomaTxtFecha">Fecha</string>
    <string name="vRegSintomaTxDetallesAdicionales">Detalles Adicionales</string>
    <string name="vRegSintomaTxtBtnRegistrar">Registrar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!--Opciones Doctores-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="opcMenuDoctoresVerPacientes">Ver pacientes</string>
    <string name="opcMenuDoctoresReporteSintomas">Reportes de sintomas</string>
    <string name="opcMenuDoctoresProximasCitas">Proximas Citas</string>
    <!--Opciones Paciente -->
    <string name="opcMenuPaientesHistSintomas">Historial Sintomas</string>
    <string name="opcMenuPaientesMiProgreso">Mi Progreso</string>
    <string name="opcMenuPaientesProximasCitas">Próximas Citas</string>

    <!--Opciones Genericas -->
    <string name="opcMenuGenMiCuenta">Mi cuenta</string>
    <string name="opcMenuGenSalir">Salir</string>
    <string name="preferences_file_key">SessionSaved</string>
    <!--Detalles de pacientes-->
    <string name="txtTituloDPDetalles">Detalles del paciente </string>
    <string name="txtLblDPNombrePaciente">Nombre Paciente</string>
    <string name="txtLblDPApellidosPaciente">Apellidos Paciente</string>
    <string name="txtLblDPApellidosEdad">Edad</string>
    <string name="txtLblDPTipoCancer">Tipo Cancer</string>
    <string name="txtLblDPTipoEtapa">Etapa el cancer</string>
    <string name="lblImagenExpediente">Imagen Expediente</string>
    <string name="BtnDPRegistrar">Quiero hacerme cargo del paciente</string>

</resources>