<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/grpDoctores"
        android:checkableBehavior="single"

        >
        <item
            android:id="@+id/visorPacientes"
            android:icon="@drawable/verpacientes"
            android:title="@string/opcMenuDoctoresVerPacientes" />
        <item
            android:id="@+id/reporteSintomas"
            android:icon="@drawable/reportesintomas"
            android:title="@string/opcMenuDoctoresReporteSintomas" />
        <item
            android:id="@+id/proximasCitasPaci"
            android:icon="@drawable/proximascitas"
            android:title="@string/opcBarProximasCitas" />
    </group>
    <group
        android:id="@+id/grpPacientes"
        >
        <item
            android:id="@+id/visorSintomas"
            android:icon="@drawable/reportesintomas"
            android:title="@string/opcBarHistorialSintomas" />
        <item
            android:id="@+id/miProgresoSintomas"
            android:icon="@drawable/miprogreso"
            android:title="@string/opcBarMiProgreso" />
        <item
            android:id="@+id/proximasCitas"
            android:icon="@drawable/proximascitas"
            android:title="@string/opcMenuDoctoresProximasCitas" />

    </group>
    <group

        android:menuCategory="secondary"
        android:checkableBehavior="single">
        <item
            android:icon="@drawable/mi_cuenta"
            android:id="@+id/miCuenta"
            android:title="@string/opcMenuGenMiCuenta"
            />
        <item
            android:id="@+id/opcSalir"
            android:icon="@drawable/salir"
            android:title="@string/opcMenuGenSalir"
            />
    </group>
</menu>