<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GUIRegistros.Pacientes.RegistroSintomas">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            >

            <TextView
                android:id="@+id/txtTituloRegisroSint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="55dp"
                android:fontFamily="@font/abel"
                android:text="@string/vRegSintomaTitulo"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="25sp"
                android:textStyle="italic|bold" />
            <EditText
                android:id="@+id/vRegSintEdtSintoma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@android:color/darker_gray"
                android:drawableLeft="@drawable/icon_email"
                android:hint="@string/vRegSintomaTxtSintoma"
                android:textColorHint="@color/colorHint"
                android:inputType="textPersonName"
                android:paddingLeft="5dp" />
            <EditText
                android:id="@+id/vRegSintEdtIntensidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@android:color/darker_gray"
                android:drawableLeft="@drawable/icon_email"
                android:hint="@string/vRegSintomaTxtIntensidad"
                android:textColorHint="@color/colorHint"
                android:inputType="textPersonName"
                android:paddingLeft="5dp" />
            <EditText
                android:id="@+id/vRegSintEdtFecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@android:color/darker_gray"
                android:drawableLeft="@drawable/icon_email"
                android:hint="@string/vRegSintomaTxtFecha"
                android:textColorHint="@color/colorHint"
                android:inputType="textPersonName"
                android:paddingLeft="5dp" />
            <EditText
                android:id="@+id/vRegSintEdtHora"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@android:color/darker_gray"
                android:drawableLeft="@drawable/icon_email"
                android:hint="@string/vRegSintomaTxtHora"
                android:textColorHint="@color/colorHint"
                android:inputType="textPersonName"
                android:paddingLeft="5dp" />
            <EditText
                android:id="@+id/vRegSintEdtDetalles"
                android:layout_width="match_parent"
                android:layout_height="187dp"
                android:ems="10"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:textColorHint="@color/colorHint"
                android:layout_marginTop="30dp"
                android:gravity="start|top"
                android:hint="@string/vRegSintomaTxDetallesAdicionales"
                android:inputType="textMultiLine" />
            <Button
                android:id="@+id/BtnRegSintBtnRegistrar"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/bordes_redondeados_btn"
                android:text="@string/vRegSintomaTxtBtnRegistrar"
                android:textColor="#FFF"
                android:textSize="12sp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>