<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GUIRegistros.Pacientes.RegistroPaciente">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        >

        <TextView
            android:id="@+id/txtTituloRegistroGen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:fontFamily="@font/abel"
            android:text="@string/vRegistroPacienteTxtTitulo"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="italic|bold" />
        <EditText
            android:id="@+id/edtVRegPaienteEspecialidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@android:color/darker_gray"
            android:drawableLeft="@drawable/icon_email"
            android:hint="@string/vRegistroPacienteTxtTipoCnacer"
            android:textColorHint="@color/colorHint"
            android:inputType="textPersonName"
            android:paddingLeft="5dp" />
        <EditText
            android:id="@+id/edtVRegPaienteCedula"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@android:color/darker_gray"
            android:drawableLeft="@drawable/icon_email"
            android:hint="@string/vRegistroPacienteTxtTiempoDiag"
            android:textColorHint="@color/colorHint"
            android:inputType="textPersonName"
            android:paddingLeft="5dp" />
        <EditText
            android:id="@+id/edtVRegPaienteFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@android:color/darker_gray"
            android:drawableLeft="@drawable/icon_email"
            android:hint="@string/vRegistroPacienteTxtEtapaCancer"
            android:textColorHint="@color/colorHint"
            android:inputType="textPersonName"
            android:paddingLeft="5dp" />
        <EditText
            android:id="@+id/edtVRegPaienteExperiencia"
            android:layout_width="match_parent"
            android:layout_height="117dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/vRegistroPacienteTxtSintomasPrevios"
            android:inputType="textMultiLine"
            android:textColorHint="@color/colorHint" />

        <Button
            android:id="@+id/BtnRegDoctSiguiente"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/bordes_redondeados_btn"
            android:text="@string/vRegistroPacienteBtnSiguiente"
            android:textColor="#FFF"
            android:textSize="12sp" />

        <Button
            android:id="@+id/BtnRegDoctRegresar"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/bordes_redondeados_btn"
            android:text="@string/vRegistroPacienteBtnRegresar"
            android:textColor="#FFF"
            android:textSize="12sp" />

    </LinearLayout>
</LinearLayout>