<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GUIRegistros.VentanaRegistroUno">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/abel"
                android:text="@string/titleRegUno"
                android:textAlignment="center"
                android:layout_marginBottom="20dp"
                android:textSize="44sp"
                android:textStyle="italic" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bordes_redondeados"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rbPaciente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/abel"
                    android:layout_marginBottom="9dp"
                    android:textSize="25dp"
                    android:layout_weight="1"
                    android:text="@string/vregistroUnoRbPaciente" />

                <RadioButton
                    android:id="@+id/rbDoctor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25dp"
                    android:layout_marginBottom="9dp"
                    android:fontFamily="@font/abel"
                    android:layout_weight="1"
                    android:text="@string/vregistroUnoRbDoctor"/>
            </LinearLayout>


            <Button
                android:id="@+id/btnRegistroEmail"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/bordes_redondeados_btn"
                android:text="@string/vRegistroUnoBtnEmail"
                android:textSize="12sp" />

        </LinearLayout>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>